Kubernetes-Manifests-file/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mainlb
  namespace: three-tier
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - host: amanpathakdevops.study
      http:
        paths:
          - path: /api(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: api
                port:
                  number: 3500
          - path: /healthz
            pathType: ImplementationSpecific
            backend:
              service:
                name: api
                port:
                  number: 3500
          - path: /ready
            pathType: ImplementationSpecific
            backend:
              service:
                name: api
                port:
                  number: 3500
          - path: /started
            pathType: ImplementationSpecific
            backend:
              service:
                name: api
                port:
                  number: 3500
          - path: /(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: frontend
                port:
                  number: 3000
